--- a/NeproFinishedGoodsAngular5/ClientApp/src/assets/material-style.css
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/assets/material-style.css
@@ -10056,7 +10056,7 @@ legend {
 }
 .dropdown-menu .dropdown-item:focus, .dropdown-menu .dropdown-item:hover, .dropdown-menu a:active, .dropdown-menu a:focus, .dropdown-menu a:hover {
   box-shadow: 0 4px 20px 0 rgba(0,0,0,.14), 0 7px 10px -5px rgb(151, 228, 205);
-  background-color: #6fc3aa;
+  background-color: #096da7;
   color: #fff;
 }
 .btn-group.bootstrap-select.open .caret, .dropdown.open .caret, .dropup.open .caret, a[aria-expanded=true] .caret, a[data-toggle=collapse][aria-expanded=true] .caret {
