--- a/NeproFinishedGoodsAngular5/ClientApp/src/assets/material-style.css
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/assets/material-style.css
@@ -9403,7 +9403,7 @@ h2.title {
 .modal-dialog .modal-header {
   border-bottom: none;
   padding: 8px 24px 8px 24px;
-  background: #09a777;
+  background: #096da7;
 }
 .modal-dialog .modal-header .modal-title {
 	text-align: center;
