--- a/NeproFinishedGoodsAngular5/ClientApp/src/app/app.component.html
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/app/app.component.html
@@ -9,13 +9,13 @@
   </div>
 </div>-->
 
-<div class='wrapper' *ngIf='(this.router1.url !== "/login")'>
-  <app-nav-menu></app-nav-menu>
-  <div class='main-panel'>   
-      <app-header></app-header>
+<div class='wrapper' >
+  <app-nav-menu *ngIf='(this.router1.url !== "/login")'></app-nav-menu>
+  <div class='main-panel' >   
+      <app-header *ngIf='(this.router1.url !== "/login")'></app-header>
       <router-outlet></router-outlet>
   
-      <app-footer></app-footer>
+      <app-footer *ngIf='(this.router1.url !== "/login")'></app-footer>
     </div>
   </div>
-<router-outlet *ngIf='this.router1.url === "/login" '></router-outlet>
+<!--<router-outlet *ngIf='this.router1.url === "/login" '></router-outlet>-->
