--- a/NeproFinishedGoodsAngular5/ClientApp/src/app/footer/footer.component.html
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
 
     <div class="copyright float-right">
-      NeproPlast Production Automation System
+      FRD Inventory Automation System
     </div>
   </div>
 </footer>
