--- a/NeproFinishedGoodsAngular5/ClientApp/src/app/login/login.component.html
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/app/login/login.component.html
@@ -1,65 +1,90 @@
+<!--<div class="container">
+  <div class="card card-login mx-auto text-center bg-dark">
+    <div class="card-header mx-auto bg-dark">
 
-<div class="container loginmain  main">
-  <section class="content w3-container w3-center w3-animate-zoom" style="margin-top: 14%;" id="login">
-    <form action="">
-      <h1><img src="../../assets/img/logo.png" style="margin-top: -7%;" /></h1>
-
-      <div>
-        <input type="text" placeholder="Username" required="" id="username" />
-      </div>
-      <div>
-        <input type="password" placeholder="Password" required="" id="password" />
-      </div>
-      <div class="col-md-12 col-xs-12 col-sm-12">
-        <div class="col-md-6 col-xs-12 col-sm-12">
-
-          <input type="submit" value="Log in" />
-        </div>
-        <div class="col-md-6 col-xs-12 col-sm-12">
-          <a [routerLink]="['/dashboard']">login</a>
-          <h6 class="btn1" style="cursor: pointer;margin-top: 20%;margin-left: 19px;font-size: 13px;">Forgot Password?</h6>
-        </div>
-
-
-      </div>
-    </form>
-
-    <div class="button">
+      <span class="logo_title mt-5"> Login Dashboard </span>
 
     </div>
-  </section>
-
-
-  <section class="content w3-container w3-center w3-animate-zoom" style="margin-top: 14%; display:none;" id="forgot">
-    <form action="">
-
-      <h1><img src="../../assets/img/logo.png" style="margin-top: -7%;" /></h1>
-
-      <div>
-        <input type="text" placeholder="E-mail" required="" id="Text1" />
-      </div>
-
-      <div class="col-md-12 col-xs-12 col-sm-12">
-        <div class="col-md-6 col-xs-10 col-sm-12">
-
-
-          <input type="submit" value="Log in" />
-        </div>
-        <div class="col-md-6 col-xs-12 col-sm-12">
-          <h6 class="btn2" style="cursor: pointer;margin-top: 21%;margin-left: 77px;font-size: 13px;">Login</h6>
+    <div class="card-body">
+      <form action="" method="post">
+        <div class="input-group form-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text"><i class="fa fa-user"></i></span>
+            <input type="text" name="email" class="form-control" placeholder="Username">
+          </div>
 
         </div>
+        <div class="input-group form-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text"><i class="fa fa-key"></i></span>
+            <input type="password" name="password" class="form-control" placeholder="Password">
+          </div>
 
-      </div>
-    </form>
-
-    <div class="button">
-
+        </div>
+        <div class="form-group">
+          <input type="submit" name="btn" value="Login" class="btn btn-outline-danger  login_btn">
+        </div>
+      </form>
     </div>
-  </section>
+  </div>
+</div>-->
 
-  
+<div class="content">
+  <div class="content">
+    <div class="container-fluid">
 
+      <div class="clearfix"></div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class=" " style="padding-right:260px;">
+        
+            <div class="card-body ">
+              <form method="get" class="form-horizontal">
+                <div class="container">
+                  <div class="row mb-2">
+                    <div class="card card-login mx-auto text-center bg-dark">
+                      <div class="card-header mx-auto bg-dark">
 
+                        <span class="logo_title mt-5"> Login Dashboard </span>
+
+                      </div>
+                      <div class="card-body">
+                        <form action="" method="post">
+                          <div class="input-group form-group">
+                            <div class="input-group-prepend">
+                              <span class="input-group-text"><i class="fa fa-user"></i></span>
+                              <input type="text" name="email" class="form-control" placeholder="Username">
+                            </div>
+
+                          </div>
+                          <div class="input-group form-group">
+                            <div class="input-group-prepend">
+                              <span class="input-group-text"><i class="fa fa-key"></i></span>
+                              <input type="password" name="password" class="form-control" placeholder="Password">
+                            </div>
+
+                          </div>
+                          <div class="form-group">
+                            <input type="submit" name="btn" value="Login" class="btn btn-outline-danger  login_btn">
+                          </div>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </form>
+             
+            </div>
+          </div>
+        </div>
+      </div>
+    
+    </div>
+  </div>
 </div>
+
+
+
+
+
 
