--- a/NeproFinishedGoodsAngular5/ClientApp/src/app/header/header.component.html
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/app/header/header.component.html
@@ -63,10 +63,9 @@
             </p>
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
-            <a class="dropdown-item" href="#">Profile</a>
-            <a class="dropdown-item" href="#">Settings</a>
+            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#changePassword"> <i class="fa fa-lock"></i> Change Password</a>           
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Log out</a>
+            <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i> Log out</a>
           </div>
         </li>
       </ul>
@@ -74,3 +73,47 @@
   </div>
 </nav>
 <!-- End Navbar -->
+<div class="modal fade" id="changePassword" role="dialog">
+  <div class="modal-dialog ">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span class="cross">&times;</span></button>
+        <h4 class="modal-title modalHead">Change Password</h4>
+      </div>
+      <div class="modal-body">
+        <form>
+
+          <div class="row">
+            <div class="col-md-12">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Enter Current Password" />
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="New Password" />
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Confirm Password" />
+              </div>
+            </div>
+          </div>
+
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success btn-sm mr-2" data-dismiss="modal">Submit</button>
+       
+      </div>
+    </div>
+
+  </div>
+</div>
