--- a/NeproFinishedGoodsAngular5/ClientApp/src/app/login/login.component.css
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/app/login/login.component.css
@@ -1,10 +1,12 @@
-
+.input-group-prepend {
+  margin: 0 auto;
+}
 .main-panel {
   width: 100% !important;
 }
 
 .card {
-  border: 1px solid #28a745;
+  border: 1px solid #fff;
 }
 
 .card-login {
@@ -25,9 +27,9 @@
 
 .input-group-prepend span {
   width: 50px;
-  background-color: #ff0000;
+  background-color: #096da7;
   color: #fff;
-  border: 0 !important;
+  border: 1px solid #fff !important;
 }
 
 input:focus {
@@ -38,20 +40,27 @@ input:focus {
 .login_btn {
   width: 130px;
 }
-
-  .login_btn:hover {
-    color: #fff;
-    background-color: #ff0000;
-  }
+.btn {
+  padding: 4px 0px;
+}
+.login_btn:hover {
+  color: #096da7;
+  background-color: #fff;
+}
 
 .btn-outline-danger {
   color: #fff;
-  font-size: 18px;
-  background-color: #28a745;
+  font-size: 15px;
+  background-color: #096da7;
   background-image: none;
-  border-color: #28a745;
+  border-color: #fff;
 }
-
+.btn.btn-outline-danger.focus, .btn.btn-outline-danger:focus, .btn.btn-outline-danger:hover {
+  border-color: #096da7;
+}
+.form-control, .is-focused .form-control {
+  background-image: none;
+}
 .form-control {
   display: block;
   width: 100%;
@@ -59,10 +68,10 @@ input:focus {
   padding: 0.375rem 0.75rem;
   font-size: 1.2rem;
   line-height: 1.6;
-  color: #28a745;
+  color: #fff;
   background-color: transparent;
   background-clip: padding-box;
-  border: 1px solid #28a745;
+  border: 1px solid #fff;
   border-radius: 0;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
