--- a/NeproFinishedGoodsAngular5/ClientApp/src/app/login/login.component.html
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/app/login/login.component.html
@@ -44,10 +44,13 @@
                   <div class="row mb-2">
                     <div class="card card-login mx-auto text-center bg-dark">
                       <div class="card-header mx-auto bg-dark">
-
-                        <span class="logo_title mt-5"> Login Dashboard </span>
-
+                        <a href="#" class="simple-text logo-normal">
+                          <img src="../../assets/img/Main-LOGO.png" />
+                        </a>
                       </div>
+                      <!--<div class="card-header mx-auto bg-dark">
+                        <span class="logo_title mt-5"> Login Dashboard </span>
+                      </div>-->
                       <div class="card-body">
                         <form action="" method="post">
                           <div class="input-group form-group">
