--- a/NeproFinishedGoodsAngular5/ClientApp/src/assets/material-style.css
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/assets/material-style.css
@@ -6667,8 +6667,8 @@ a.text-dark:focus, a.text-dark:hover {
     }
       .btn.btn-success.active.focus, .btn.btn-success.active:focus, .btn.btn-success.active:hover, .btn.btn-success:active.focus, .btn.btn-success:active:focus, .btn.btn-success:active:hover, .open > .btn.btn-success.dropdown-toggle.focus, .open > .btn.btn-success.dropdown-toggle:focus, .open > .btn.btn-success.dropdown-toggle:hover, .show > .btn.btn-success.dropdown-toggle.focus, .show > .btn.btn-success.dropdown-toggle:focus, .show > .btn.btn-success.dropdown-toggle:hover {
         color: #fff;
-        background-color: #09a777;
-        border-color: #255627
+        background-color: #354163;
+        border-color: #354163
       }
 .open>.btn.btn-success.dropdown-toggle.bmd-btn-icon {
 	color: inherit;
@@ -7775,7 +7775,7 @@ color:#999
 	color: #999
 }
 .form-control, .is-focused .form-control {
-  background-image: linear-gradient(0deg, #09a777 2px, rgba(156,39,176,0) 0), linear-gradient(0deg, #d2d2d2 1px, hsla(0,0%,82%,0) 0)
+  background-image: linear-gradient(0deg, #354163 2px, rgba(156,39,176,0) 0), linear-gradient(0deg, #d2d2d2 1px, hsla(0,0%,82%,0) 0)
 }
 .form-control:invalid {
 background-image:linear-gradient(0deg, #f44336 2px, rgba(244,67,54,0) 0), linear-gradient(0deg, #d2d2d2 1px, hsla(0,0%,82%,0) 0)
