--- a/NeproFinishedGoodsAngular5/ClientApp/src/styles.css
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/styles.css
@@ -49,7 +49,7 @@ button .fa {
  color:#fff
 }
 .cross {
-  color: #015a3f;
+  color: #086da7;
   font-weight: bold;
   position: absolute;
   top: 2px;
@@ -128,4 +128,6 @@ select.selectpicker option:hover {
   background: #09a777 !important;
   color: #ffffff !important;
 }
-
+.form-checkbox {
+  margin-top: 12px;
+}
