validation in user page

--- a/NeproFinishedGoodsAngular5/ClientApp/src/app/item-request/item-request.component.html
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/app/item-request/item-request.component.html
@@ -32,27 +32,47 @@
                     <div class="col-md-6">
 
                       <div class="row">
-                        <label class="col-sm-3 col-md-4 col-form-label">Request Number</label>
+                        <label class="col-sm-3 col-md-4 col-form-label">To Warehouse</label>
                         <div class="col-sm-8 col-md-8">
-                          <div class="form-group">
-                            <input type="text" class="form-control" placeholder="">
+                          <div class="dropdown">
+                            <div class="form-group">
+                              <div class="form-control">
+                                <select class="selectpicker" data-style="select-with-transition" title="" data-size="7">
+                                  <option> Select</option>
+                                  <option value="2">Warehouse 1</option>
+                                  <option value="3">Warehouse 2</option>
+                                  <option value="4">Warehouse 3</option>
+
+                                </select>
+                              </div>
+                            </div>
                           </div>
                         </div>
                       </div>
                     </div>
                     <div class="col-md-6">
                       <div class="row">
-                        <label class="col-sm-2  col-md-4 col-form-label">Request Name</label>
+                        <label class="col-sm-2  col-md-4 col-form-label">Item</label>
                         <div class="col-sm-9 col-md-8">
-                          <div class="form-group">
-                            <input type="text" class="form-control">
+                          <div class="dropdown">
+                            <div class="form-group">
+                              <div class="form-control">
+                                <select class="selectpicker" data-style="select-with-transition" title="" data-size="7">
+                                  <option> Select</option>
+                                  <option value="2">Item 1</option>
+                                  <option value="3">Item 2</option>
+                                  <option value="4">Item 3</option>
+
+                                </select>
+                              </div>
+                            </div>
                           </div>
                         </div>
                       </div>
                     </div>
                     <div class="col-md-6">
                       <div class="row">
-                        <label class="col-sm-3 col-md-4 col-form-label">Created By</label>
+                        <label class="col-sm-3 col-md-4 col-form-label">Reason</label>
                         <div class="col-sm-8 col-md-8">
                           <div class="form-group">
                             <input type="text" class="form-control">
@@ -64,19 +84,7 @@
 
 
                       <div class="row">
-                        <label class="col-sm-3 col-md-4 col-form-label">Requested Date</label>
-                        <div class="col-sm-8 col-md-8">
-                          <div class="form-group">
-                            <input type="date" class="form-control">
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-
-
-                      <div class="row">
-                        <label class="col-sm-3 col-md-4 col-form-label">Requesting Warehouse</label>
+                        <label class="col-sm-3 col-md-4 col-form-label">Required Quantity</label>
                         <div class="col-sm-8 col-md-8">
                           <div class="form-group">
                             <input type="text" class="form-control">
@@ -84,20 +92,12 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-md-6">
-
-
-                      <div class="row">
-                        <label class="col-sm-3 col-md-4 col-form-label">Requested Submitted Date</label>
-                        <div class="col-sm-8 col-md-8">
-                          <div class="form-group">
-                            <input type="date" class="form-control">
-                          </div>
-                        </div>
-                      </div>
+                    <div class="col-md-12 ">
+                      <button class="btn pull-right btn-success btn-sm"><i aria-hidden="true" class="fa fa-plus"></i>Add</button>
                     </div>
                   </div>
                 </div>
+               
               </form>
               <div class="table-responsive">
 
