--- a/NeproFinishedGoodsAngular5/ClientApp/src/app/request-control/request-control.component.html
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/app/request-control/request-control.component.html
@@ -3,9 +3,8 @@
     <div class="card-body pull-right p-1">
 
       <!--<button class="btn btn-success btn-sm"><i class="fa fa-plus-square-o" aria-hidden="true"></i>New</button>-->
-      <button class="btn btn-success btn-sm" data-toggle="modal" data-target="#myModal1"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Generate</button>
-      <button class="btn btn-success btn-sm"><i class="fa fa-floppy-o" aria-hidden="true"></i>Accept</button>
-      <button class="btn btn-success btn-sm"><i class="fa fa-trash" aria-hidden="true"></i>Reject</button>
+      <!--<button class="btn btn-success btn-sm" data-toggle="modal" data-target="#myModal1"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Generate</button>-->
+     
       <!--<button class="btn btn-success btn-sm"><i class="fa fa-undo" aria-hidden="true"></i>Back</button>-->
     </div>
     <div class="clearfix"></div>
@@ -130,6 +129,7 @@
 
       </div>-->
       <div class="row  mb-5">
+    
         <div class="col-md-12">
           <div class="card">
             <div class="card-header card-header-rose card-header-icon">
@@ -139,6 +139,53 @@
               <h4 class="card-title"></h4>
             </div>
             <div class="card-body">
+              <form method="get" class="form-horizontal">
+                <div class="container">
+                  <div class="row mb-2">
+                    <div class="col-md-6">
+
+                      <div class="row">
+                        <label class="col-sm-3 col-md-4 col-form-label">Warehouse</label>
+                        <div class="col-sm-8 col-md-8">
+                          <label class=" col-form-label">: XYZ</label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="row">
+                        <label class="col-sm-2  col-md-4 col-form-label">Created By</label>
+                        <div class="col-sm-9 col-md-8">
+                          <label class=" col-form-label">: XYZ</label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="row">
+                        <label class="col-sm-3 col-md-4 col-form-label">Created On</label>
+                        <div class="col-sm-8 col-md-8">
+                          <label class=" col-form-label">: XYZ</label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+
+
+                      <div class="row">
+                        <label class="col-sm-3 col-md-4 col-form-label">Required No.</label>
+                        <div class="col-sm-8 col-md-8">
+                          <label class=" col-form-label">: XYZ</label>
+                        </div>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+                <div class="mb-5">
+                  <button class="btn btn-success btn-sm  pull-right"><i class="fa fa-trash" aria-hidden="true"></i>Reject</button>
+                  <button class="btn btn-success btn-sm  pull-right" data-toggle="modal" data-target="#myModal1"><i class="fa fa-floppy-o" aria-hidden="true"></i>Accept</button>
+
+                </div>
+              </form>
               <div class="table-responsive">
 
                 <ag-grid-angular style="width:100%; height: auto"
@@ -161,18 +208,20 @@
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span class="cross">&times;</span></button>
+        <button type="button" class="close" data-dismiss="modal">
+        <span class="cross">&times;</span></button>
         <h4 class="modal-title modalHead">Generate</h4>
       </div>
       <div class="modal-body">
         <ag-grid-angular style="width:100%; height: auto"
                          class="ag-theme-balham"
-                         [rowData]="rowData2"
-                         [columnDefs]="columnDefs2"></ag-grid-angular>
+                         [rowData]="rowData"
+                         [columnDefs]="columnDefs">
+
+        </ag-grid-angular>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-success btn-sm mr-2" data-dismiss="modal">Pick</button>
-        <button type="button" class="btn btn-success btn-sm" data-dismiss="modal">Transfer</button>
+        <button type="button" class="btn btn-success btn-sm mr-2" data-dismiss="modal">OK</button>      
       </div>
     </div>
 
