--- a/NeproFinishedGoodsAngular5/ClientApp/src/app/transfer-order/transfer-order.component.html
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/app/transfer-order/transfer-order.component.html
@@ -17,8 +17,11 @@
     <div class="container-fluid">
 
       <div class="clearfix"></div>
-
+      <div class="row" >
+     
+      </div>
       <div class="row  mb-5" *ngIf="hide">
+      
         <div class="col-md-12">
           <div class="card">
             <div class="card-header card-header-rose card-header-icon">
@@ -42,6 +45,7 @@
 
       </div>
       <div class="row  mb-5" *ngIf="show">
+       
         <div class="col-md-12">
           <div class="card">
             <div class="card-header card-header-rose card-header-icon">
