--- a/NeproFinishedGoodsAngular5/ClientApp/src/app/user/user.component.html
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/app/user/user.component.html
@@ -2,9 +2,9 @@
   <div class="container-fluid">
     <div class="card-body pull-right p-1">
 
-      <button class="btn btn-success btn-sm" (click)="showhide()"><i class="fa fa-plus-square-o" aria-hidden="true"></i>New</button>
+      <button class="btn btn-success btn-sm" ><i class="fa fa-plus-square-o" aria-hidden="true"></i>New</button>
       <!--<button class="btn btn-success btn-sm"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Edit</button>-->
-      <button class="btn btn-success btn-sm" (click)="showhide2()"><i class="fa fa-floppy-o" aria-hidden="true"></i>Submit</button>
+      <button class="btn btn-success btn-sm" (click)="userSubmit()"><i class="fa fa-floppy-o" aria-hidden="true"></i>Submit</button>
       <!--<button class="btn btn-success btn-sm"><i class="fa fa-trash" aria-hidden="true"></i>Delete</button>-->
       <button class="btn btn-success btn-sm"><i class="fa fa-undo" aria-hidden="true"></i>Back</button>
     </div>
@@ -26,7 +26,7 @@
               </div>
             </div>
             <div class="card-body ">
-              <form method="get" class="form-horizontal">
+              <form  class="form-horizontal"  [formGroup]="userForm">
                 <div class="container">
                   <div class="row mb-2">
                     <div class="col-md-6">
@@ -35,7 +35,10 @@
                         <label class="col-sm-3 col-md-4 col-form-label">User Name</label>
                         <div class="col-sm-8 col-md-8">
                           <div class="form-group">
-                            <input type="text" class="form-control" placeholder="">
+                            <input type="text" class="form-control" placeholder="" formControlName="username" [ngClass]="{'is-invalid': submitted && f.username.errors}">
+                            <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+                              <div *ngIf="f.username.errors.required">* Username is required</div>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -45,7 +48,10 @@
                         <label class="col-sm-2  col-md-4 col-form-label">E-mail</label>
                         <div class="col-sm-9 col-md-8">
                           <div class="form-group">
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" formControlName="email" [ngClass]="{'is-invalid': submitted && f.email.errors}">
+                            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                              <div *ngIf="f.email.errors.required">* E-mail is required</div>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -55,31 +61,36 @@
                         <label class="col-sm-3 col-md-4 col-form-label">Password</label>
                         <div class="col-sm-8 col-md-8">
                           <div class="form-group">
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" formControlName="password" [ngClass]="{'is-invalid': submitted && f.password.errors}">
+                            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                              <div *ngIf="f.password.errors.required">* Password is required</div>
+                            </div>
                           </div>
                         </div>
                       </div>
                     </div>
                     <div class="col-md-6">
-
-
                       <div class="row">
                         <label class="col-sm-3 col-md-4 col-form-label">User Pin</label>
                         <div class="col-sm-8 col-md-8">
                           <div class="form-group">
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" formControlName="userpin" [ngClass]="{'is-invalid': submitted && f.userpin.errors}">
+                            <div *ngIf="submitted && f.userpin.errors" class="invalid-feedback">
+                              <div *ngIf="f.userpin.errors.required">* User Pin is required</div>
+                            </div>
                           </div>
                         </div>
                       </div>
                     </div>
                     <div class="col-md-6">
-
-
                       <div class="row">
                         <label class="col-sm-3 col-md-4 col-form-label">Confirm Password</label>
                         <div class="col-sm-8 col-md-8">
                           <div class="form-group">
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" formControlName="cpassword" [ngClass]="{'is-invalid': submitted && f.cpassword.errors}">
+                            <div *ngIf="submitted && f.cpassword.errors" class="invalid-feedback">
+                            <div *ngIf="f.cpassword.errors.required">* Site is required</div>
+                            </div>
                           </div>
                         </div>
                       </div>
