--- a/NeproFinishedGoodsAngular5/ClientApp/src/app/user/user.component.html
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/app/user/user.component.html
@@ -17,16 +17,17 @@
     <div class="container-fluid">
 
       <div class="clearfix"></div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="card ">
-            <div class="card-header card-header-rose card-header-text">
-              <div class="card-text">
-                <h4 class="card-title">User Form</h4>
+      <form class="form-horizontal" [formGroup]="userForm">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="card ">
+              <div class="card-header card-header-rose card-header-text">
+                <div class="card-text">
+                  <h4 class="card-title">User Form</h4>
+                </div>
               </div>
-            </div>
-            <div class="card-body ">
-              <form  class="form-horizontal"  [formGroup]="userForm">
+              <div class="card-body ">
+                <!--<form  class="form-horizontal"  [formGroup]="userForm">-->
                 <div class="container">
                   <div class="row mb-2">
                     <div class="col-md-6">
@@ -51,6 +52,7 @@
                             <input type="text" class="form-control" formControlName="email" [ngClass]="{'is-invalid': submitted && f.email.errors}">
                             <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
                               <div *ngIf="f.email.errors.required">* E-mail is required</div>
+                              <div *ngIf="f.email.errors.email">* valid email is required</div>
                             </div>
                           </div>
                         </div>
@@ -89,7 +91,7 @@
                           <div class="form-group">
                             <input type="text" class="form-control" formControlName="cpassword" [ngClass]="{'is-invalid': submitted && f.cpassword.errors}">
                             <div *ngIf="submitted && f.cpassword.errors" class="invalid-feedback">
-                            <div *ngIf="f.cpassword.errors.required">* Site is required</div>
+                              <div *ngIf="f.cpassword.errors.required">* Site is required</div>
                             </div>
                           </div>
                         </div>
@@ -102,23 +104,23 @@
                     </div>
                   </div>
                 </div>
-              </form>
+                <!--</form>-->
 
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="col-md-12">
-          <div class="card ">
-            <div class="card-header card-header-rose card-header-text">
-              <div class="card-text">
-                <h4 class="card-title">Access Rights</h4>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="card ">
+              <div class="card-header card-header-rose card-header-text">
+                <div class="card-text">
+                  <h4 class="card-title">Access Rights</h4>
+                </div>
               </div>
-            </div>
-            <div class="card-body ">
-              <form method="get" class="form-horizontal">
+              <div class="card-body ">
+
                 <div class="container">
                   <div class="row mb-2">
                     <div class="col-md-6">
@@ -127,7 +129,7 @@
                         <label class="col-sm-3 col-md-3 col-form-label">Store Picker</label>
                         <div class="col-sm-8 col-md-9">
                           <div class="form-group">
-                            <input type="checkbox" class="form-checkbox" placeholder="">
+                            <input type="checkbox" class="form-checkbox"  formControlName="cpassword" [ngClass]="{'is-invalid': submitted && f.cpassword.errors}" >
                           </div>
                         </div>
                       </div>
@@ -137,20 +139,21 @@
                         <label class="col-sm-2  col-md-3 col-form-label">Controller</label>
                         <div class="col-sm-9 col-md-9">
                           <div class="form-group">
-                            <input type="checkbox" class="form-checkbox">
+                            <input type="checkbox" class="form-checkbox"  formControlName="cpassword" [ngClass]="{'is-invalid': submitted && f.cpassword.errors}">
                           </div>
                         </div>
                       </div>
                     </div>
-                  
+
                   </div>
                 </div>
-              </form>
 
+
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      </form>
     </div>
   </div>
 </div>
