--- a/NeproFinishedGoodsAngular5/ClientApp/src/app/login/login.component.html
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/app/login/login.component.html
@@ -52,23 +52,30 @@
                         <span class="logo_title mt-5"> Login Dashboard </span>
                       </div>-->
                       <div class="card-body">
-                        <form action="" method="post">
+                        <form  [formGroup]="userForm"  >
                           <div class="input-group form-group">
                             <div class="input-group-prepend">
                               <span class="input-group-text"><i class="fa fa-user"></i></span>
-                              <input type="text" name="email" class="form-control" placeholder="Username">
+                              <input type="email" name="EmailId" class="form-control" placeholder="Username" formControlName="EmailId" [ngClass]="{'is-invalid': submitted && f.EmailId.errors}">
+                              <div *ngIf="submitted && f.EmailId.errors" class="invalid-feedback">
+                                <div *ngIf="f.EmailId.errors.required">* E-mail is required</div>
+                                <div *ngIf="f.EmailId.errors.email">* valid email is required</div>
+                              </div>
                             </div>
 
                           </div>
                           <div class="input-group form-group">
                             <div class="input-group-prepend">
                               <span class="input-group-text"><i class="fa fa-key"></i></span>
-                              <input type="password" name="password" class="form-control" placeholder="Password">
+                              <input type="password" name="password" class="form-control" placeholder="Password" formControlName="password" [ngClass]="{'is-invalid': submitted && f.password.errors}">
+                              <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                                <div *ngIf="f.password.errors.required">* Password is required</div>
+                              </div>
                             </div>
 
                           </div>
                           <div class="form-group">
-                            <input type="submit" name="btn" value="Login" class="btn btn-outline-danger  login_btn">
+                            <input type="submit" name="btn" value="Login" (click)="LoginUser()" class="btn btn-outline-danger  login_btn">
                           </div>
                         </form>
                       </div>
