--- a/NeproFinishedGoodsAngular5/ClientApp/src/app/user/user.component.html
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/app/user/user.component.html
@@ -4,7 +4,7 @@
 
       <button class="btn btn-success btn-sm" ><i class="fa fa-plus-square-o" aria-hidden="true"></i>New</button>
       <!--<button class="btn btn-success btn-sm"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Edit</button>-->
-      <button class="btn btn-success btn-sm" (click)="userSubmit()"><i class="fa fa-floppy-o" aria-hidden="true"></i>Submit</button>
+      <button class="btn btn-success btn-sm" (click)="save()"><i class="fa fa-floppy-o" aria-hidden="true"></i>Submit</button>
       <!--<button class="btn btn-success btn-sm"><i class="fa fa-trash" aria-hidden="true"></i>Delete</button>-->
       <button class="btn btn-success btn-sm"><i class="fa fa-undo" aria-hidden="true"></i>Back</button>
     </div>
@@ -49,10 +49,10 @@
                         <label class="col-sm-2  col-md-4 col-form-label">E-mail</label>
                         <div class="col-sm-9 col-md-8">
                           <div class="form-group">
-                            <input type="text" class="form-control" formControlName="email" [ngClass]="{'is-invalid': submitted && f.email.errors}">
-                            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-                              <div *ngIf="f.email.errors.required">* E-mail is required</div>
-                              <div *ngIf="f.email.errors.email">* valid email is required</div>
+                            <input type="email" class="form-control" formControlName="EmailId" [ngClass]="{'is-invalid': submitted && f.EmailId.errors}">
+                            <div *ngIf="submitted && f.EmailId.errors" class="invalid-feedback">
+                              <div *ngIf="f.EmailId.errors.required">* E-mail is required</div>
+                              <!--<div *ngIf="f.email.errors.email">* valid email is required</div>-->
                             </div>
                           </div>
                         </div>
