user page changes

--- a/NeproFinishedGoodsAngular5/ClientApp/src/app/user/user.component.html
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/app/user/user.component.html
@@ -129,7 +129,7 @@
                         <label class="col-sm-3 col-md-3 col-form-label">Store Picker</label>
                         <div class="col-sm-8 col-md-9">
                           <div class="form-group">
-                            <input type="checkbox" class="form-checkbox"  formControlName="cpassword" [ngClass]="{'is-invalid': submitted && f.cpassword.errors}" >
+                            <input type="checkbox" class="form-checkbox "  formControlName="storepicker"  >
                           </div>
                         </div>
                       </div>
@@ -139,7 +139,7 @@
                         <label class="col-sm-2  col-md-3 col-form-label">Controller</label>
                         <div class="col-sm-9 col-md-9">
                           <div class="form-group">
-                            <input type="checkbox" class="form-checkbox"  formControlName="cpassword" [ngClass]="{'is-invalid': submitted && f.cpassword.errors}">
+                            <input type="checkbox" class="form-checkbox"  formControlName="controller" >
                           </div>
                         </div>
                       </div>
