--- a/NeproFinishedGoodsAngular5/ClientApp/src/app/header/header.component.html
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/app/header/header.component.html
@@ -29,19 +29,18 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fa fa-bell" aria-hidden="true"></i>
-            <span class="notification">5</span>
+           amar@gamail.com
             <p class="d-lg-none d-md-block">
               Some Actions
             </p>
           </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+          <!--<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="#">Mike John responded to your email</a>
             <a class="dropdown-item" href="#">You have 5 new tasks</a>
             <a class="dropdown-item" href="#">You're now friend with Andrew</a>
             <a class="dropdown-item" href="#">Another Notification</a>
             <a class="dropdown-item" href="#">Another One</a>
-          </div>
+          </div>-->
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#pablo" id="navbarDropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
