--- a/NeproFinishedGoodsAngular5/ClientApp/src/app/header/header.component.html
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/app/header/header.component.html
@@ -29,7 +29,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-           amar@gamail.com
+           amar@gmail.com
             <p class="d-lg-none d-md-block">
               Some Actions
             </p>
