--- a/NeproFinishedGoodsAngular5/ClientApp/src/app/item-request/item-request.component.html
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/app/item-request/item-request.component.html
@@ -134,7 +134,7 @@
         </div>
 
       </div>-->
-      <div class="row  mb-5" *ngIf="hide">
+      <div class="row  mb-5" >
         <div class="col-md-12">
           <div class="card">
             <div class="card-header card-header-rose card-header-icon">
