--- a/NeproFinishedGoodsAngular5/ClientApp/src/app/user/user.component.html
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/app/user/user.component.html
@@ -17,7 +17,7 @@
     <div class="container-fluid">
 
       <div class="clearfix"></div>
-      <form class="form-horizontal" [formGroup]="userForm">
+      <!--<form class="form-horizontal" [formGroup]="userForm">-->
         <div class="row">
           <div class="col-md-12">
             <div class="card ">
@@ -27,7 +27,7 @@
                 </div>
               </div>
               <div class="card-body ">
-                <!--<form  class="form-horizontal"  [formGroup]="userForm">-->
+                <form  class="form-horizontal"  [formGroup]="userForm">
                 <div class="container">
                   <div class="row mb-2">
                     <div class="col-md-6">
@@ -49,10 +49,10 @@
                         <label class="col-sm-2  col-md-4 col-form-label">E-mail</label>
                         <div class="col-sm-9 col-md-8">
                           <div class="form-group">
-                            <input type="email" class="form-control" formControlName="EmailId" [ngClass]="{'is-invalid': submitted && f.EmailId.errors}">
-                            <div *ngIf="submitted && f.EmailId.errors" class="invalid-feedback">
-                              <div *ngIf="f.EmailId.errors.required">* E-mail is required</div>
-                              <!--<div *ngIf="f.email.errors.email">* valid email is required</div>-->
+                            <input type="text" class="form-control" formControlName="email" [ngClass]="{'is-invalid': submitted && f.email.errors}">
+                            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                              <div *ngIf="f.email.errors.required">* Email Id is required</div>
+                              <div *ngIf="f.email.errors.email">* Email Id must be at least 6 characters</div>
                             </div>
                           </div>
                         </div>
@@ -66,10 +66,25 @@
                             <input type="text" class="form-control" formControlName="password" [ngClass]="{'is-invalid': submitted && f.password.errors}">
                             <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                               <div *ngIf="f.password.errors.required">* Password is required</div>
+                              <div *ngIf="f.password.errors.minlength">* Password must be at least 6 characters</div>
                             </div>
                           </div>
                         </div>
                       </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="row">
+                        <label class="col-sm-3 col-md-4 col-form-label">Confirm Password</label>
+                        <div class="col-sm-8 col-md-8">
+                          <div class="form-group">
+                            <input type="text" class="form-control" formControlName="cpassword" [ngClass]="{'is-invalid': submitted && f.cpassword.errors}">
+                            <div *ngIf="submitted && f.cpassword.errors" class="invalid-feedback">
+                              <div *ngIf="f.cpassword.errors.required">* Confirm Password is required</div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
                     </div>
                     <div class="col-md-6">
                       <div class="row">
@@ -85,76 +100,80 @@
                       </div>
                     </div>
                     <div class="col-md-6">
-                      <div class="row">
-                        <label class="col-sm-3 col-md-4 col-form-label">Confirm Password</label>
-                        <div class="col-sm-8 col-md-8">
-                          <div class="form-group">
-                            <input type="text" class="form-control" formControlName="cpassword" [ngClass]="{'is-invalid': submitted && f.cpassword.errors}">
-                            <div *ngIf="submitted && f.cpassword.errors" class="invalid-feedback">
-                              <div *ngIf="f.cpassword.errors.required">* Site is required</div>
+
+
+
+                    </div>
+
+                    <div class="container accessrights">
+                      <div class="row ">
+                        <div class="col-md-6">
+                          <div class="rights">Select Access Rights</div>
+
+                        </div>
+                        <div class="col-md-6">
+                          <div class="row">
+                            <label class="col-sm-6  col-md-3 col-form-label">Controller</label>
+                            <div class="col-sm-6 col-md-3">
+                              <div class="form-group">
+                                <input type="checkbox" class="form-checkbox" formControlName="InventoryController" [ngClass]="{'is-invalid': submitted && f.InventoryController.errors}">
+                                <div *ngIf="submitted && f.InventoryController.errors" class="invalid-feedback">
+                                  <div *ngIf="f.InventoryController.errors.required">* Controller is required</div>
+                                </div>
+                              </div>
+                            </div>
+                            <label class="col-sm-6 col-md-3 col-form-label">Store Picker</label>
+                            <div class="col-sm-6 col-md-3">
+                              <div class="form-group">
+                                <input type="checkbox" class="form-checkbox" formControlName="StorePicker" [ngClass]="{'is-invalid': submitted && f.StorePicker.errors}">
+                                <div *ngIf="submitted && f.StorePicker.errors" class="invalid-feedback">
+                                  <div *ngIf="f.StorePicker.errors.required">* Store Picker is required</div>
+                                </div>
+                              </div>
                             </div>
                           </div>
+
+
                         </div>
+
                       </div>
-                    </div>
-                    <div class="col-md-6">
-
-
-
                     </div>
                   </div>
                 </div>
-                <!--</form>-->
+                </form>
 
               </div>
             </div>
           </div>
         </div>
 
-        <div class="row">
-          <div class="col-md-12">
-            <div class="card ">
-              <div class="card-header card-header-rose card-header-text">
-                <div class="card-text">
-                  <h4 class="card-title">Access Rights</h4>
-                </div>
+
+      <!--</form>-->
+      <div class="row  mb-5">
+        <div class="col-md-12">
+          <div class="card">
+            <div class="card-header card-header-rose card-header-icon">
+              <div class="card-text">
+                <h4 class="card-title">All Users</h4>
               </div>
-              <div class="card-body ">
+              <h4 class="card-title"></h4>
+            </div>
+            <div class="card-body">
+              <div class="table-responsive">
 
-                <div class="container">
-                  <div class="row mb-2">
-                    <div class="col-md-6">
-
-                      <div class="row">
-                        <label class="col-sm-3 col-md-3 col-form-label">Store Picker</label>
-                        <div class="col-sm-8 col-md-9">
-                          <div class="form-group">
-                            <input type="checkbox" class="form-checkbox"  formControlName="StorePicker" [ngClass]="{'is-invalid': submitted && f.cpassword.errors}" >
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                      <div class="row">
-                        <label class="col-sm-2  col-md-3 col-form-label">Controller</label>
-                        <div class="col-sm-9 col-md-9">
-                          <div class="form-group">
-                            <input type="checkbox" class="form-checkbox"  formControlName="InventoryController" [ngClass]="{'is-invalid': submitted && f.cpassword.errors}">
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-
-                  </div>
-                </div>
-
+                <ag-grid-angular style="width:100%; height: auto"
+                                 class="ag-theme-balham"
+                                 [rowData]="rowData1"
+                                 [columnDefs]="columnDefs1"></ag-grid-angular>
 
               </div>
             </div>
           </div>
         </div>
-      </form>
+
+      </div>
     </div>
+  
   </div>
 </div>
 
