--- a/NeproFinishedGoodsAngular5/ClientApp/src/app/request-control/request-control.component.html
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/app/request-control/request-control.component.html
@@ -181,6 +181,7 @@
                   </div>
                 </div>
                 <div class="mb-5">
+                  <button class="btn pull-right btn-success btn-sm"><i aria-hidden="true" class="fa fa-file"></i>Report</button>
                   <button class="btn btn-success btn-sm  pull-right"><i class="fa fa-trash" aria-hidden="true"></i>Reject</button>
                   <button class="btn btn-success btn-sm  pull-right" data-toggle="modal" data-target="#myModal1"><i class="fa fa-floppy-o" aria-hidden="true"></i>Accept</button>
 
